Fix icons and align vertically

--- a/src/app/private/css/storeroom.component.css
+++ b/src/app/private/css/storeroom.component.css
@@ -3,3 +3,7 @@
   margin-top: calc(var(--bs-gutter-x)/ 2);
   margin-bottom: calc(var(--bs-gutter-x)/ 2);
 }
+
+table td {
+  vertical-align: middle;
+}
